# SNOMED-CT-PAT-FI-EN

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py  technical_design_document.md  test_excel.xlsx
src/: Home.py  app.py  config.py  index.py  main.py
src/actions/: __init__.py  activate.py  administrative.py  fsn.py  inactivate.py  new.py  new_concept.py  new_term.py  other.py
src/actions/edit/: __init__.py  fsn.py
src/actions/new/: new.py
src/client/pages/: 01_Code_Server_Format.py
src/entities/: row.py
src/intl/: create_snap_views.sql
src/intl/PostgreSQL/: README.md  load_release-postgresql.sh  tmp_loader.sql
src/intl/views/: snap_concept_view.sql  snap_description_view.sql  snap_fsn_view.sql  snap_langrefset_view.sql  snap_pref_view.sql  snap_syn_view.sql  snap_synall_view.sql
src/main/: __init__.py  check.py  cs_format.py  intl_compare.py  intl_update.py  update.py
src/pages/: 00_Update.py  01_Code_Server_Format.py  02_Check.py  03_Files.py  03_International.py  04_Compare_to_Intl.py  05_Files.py
src/services/: __init__.py  database.py  verhoeff.py
src/services/components/: __init__.py  component.py  create.py  get.py  post.py  put.py  set.py
src/services/general/: __init__.py  clean.py  database.py  excel.py  verhoeff.py
src/updates/: __init__.py  edit.py  inactivate.py  new.py
